Changed alert message and fixed scrollbar bug

--- a/src/index.css
+++ b/src/index.css
@@ -247,7 +247,6 @@ header {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  overflow-x: hidden;
 }
 
 .header__description {
